# local.ts

./: .coderabbit.yaml  .gitignore  .oxlintrc.json  README.md  biome.jsonc  index.html  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  splash.html  todo.json  tsconfig.json  tsconfig.node.json  turbo.json  vite.config.ts
.claude/: CLAUDE.md
.cursor/: hooks.json
.github/: copilot-instructions.md
.github/actions/setup-vp/: action.yml
.github/workflows/: build.yml  check.yml  ci.yml  frontend-ci.yml  lint.yml  publish.yml  tauri-ci.yml  test.yml
.zed/: settings.json
src/: App.tsx  app.tsx  main.tsx
src-tauri/: Cargo.toml  diesel.toml  package.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/2026-01-03-120114_create_settings/: up.sql
src-tauri/migrations/2026-01-03-171853-0000_add_notification_settings/: down.sql  up.sql
src-tauri/src/: lib.rs  main.rs  system_tray.rs
src-tauri/src/commands/: mod.rs  notifications.rs  settings.rs  window.rs
src-tauri/src/database/: error.rs  mod.rs  schema.rs  utils.rs
src-tauri/src/database/models/: mod.rs  settings.rs
src-tauri/src/plugins/: logging.rs  mod.rs  system_tray.rs  window.rs  window_state.rs
src-tauri/src/services/: settings.rs
src/__tests__/: index.test.ts
src/components/: label.tsx  setting-row.tsx  settings-section.tsx  sidebar.tsx  store-initializer.tsx
src/components/ui/: button.tsx  label.tsx  select.tsx  sidebar.tsx  switch.tsx  tooltip.tsx
src/components/ui/sidebar/: sidebar-header.tsx  sidebar-mobile.tsx  sidebar-nav-item.tsx  sidebar-nav.tsx  sidebar-skeleton.tsx
src/constants/: index.ts  settings.ts  sidebar.ts
src/hooks/: use-async-action.ts  use-handle-settings.ts
src/lib/: platform.ts  utils.ts
src/lib/settings/: index.ts  types.ts
src/lib/tauri/notifications/: channels.ts  permissions.ts  send.ts
src/lib/tauri/settings/: index.ts  types.ts
src/routes/: __root.tsx  index.tsx  settings.tsx
src/stores/: settings.ts  theme.ts
src/styles/: app.css  globals.css
