[package]
name = "local-ts"
version = "0.1.0"
description = "A starter kit for building local-first applications for mobile and desktop."
authors = ["Alexandre Trotel"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "local_ts_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
tauri-plugin-window-state = "2"
diesel = { version = "2", features = ["sqlite", "r2d2"] }
diesel_migrations = "2"
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
thiserror = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(any(target_os = "macos", target_os = "windows", target_os = "linux"))'.dependencies]
tauri-plugin-autostart = "2"
